tests/diagnostics/catalog/snapshots/ir/IR0046.snap
error[IR0046]: IR_E_MACRO_EXPANSION_FAILED
 --> tests/diagnostics/catalog/sources/ir/IR0046.vit:4:8
  |
4 |   give unresolved_ir_contract;
  |        ^^^^^^^^^^^^^^^^^^^^^^ IR diagnostic anchor
  = note: snapshot covers code, title, span, notes, suggestions, recovery and stable order for IR0046
  = help: keep IR validation diagnostics structured and catalog-backed
